[project]
name = "comfyui-geekyremb"
description = "GeekyRemB is a powerful suite of image processing nodes for ComfyUI, offering advanced background removal, animation, lighting effects, and keyframe-based positioning. Built on the rembg library with additional capabilities for chroma keying, mask refinement, realistic lighting, shadow generation, and dynamic animations."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "rembg",
    "Pillow",
    "torch",
    "opencv-python",
    "tqdm",
    "huggingface-hub",
    "scikit-image",
    "scipy",
    "onnxruntime-gpu",  # For GPU support
    "transformers"
]

[project.urls]
Repository = "https://github.com/GeekyGhost/ComfyUI-GeekyRemB"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-GeekyRemB"
Icon = ""
